--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,1 @@
-<h1>ola galera</h1>
+<iframe src="https://discord.com/widget?id=908754212228304946&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
